# Auto-dealer

./: Auto_Dealer_SOP.md  README.md  StartupOS_SOP.md  automobile_dealership_erpnext_v15.txt  pdf_content.txt  pdf_full.txt  pyproject.toml  requirements.txt  setup.ps1  setup.py
api/: __init__.py
auto_dealer/: __init__.py  hooks.py  modules.txt  tasks.py  utils.py
auto_dealer/api/: loan_dsa.py  whatsapp.py
auto_dealer/auto_dealer/: patches.txt  permissions.py
auto_dealer/auto_dealer/api/: insurance.py  marketplace_sync.py
auto_dealer/auto_dealer/doctype/: __init__.py  service_job_card_item
auto_dealer/auto_dealer/events/: delivery_note.py  vehicle_sale.py
auto_dealer/auto_dealer/overrides/: delivery_note.py  sales_invoice.py
auto_dealer/auto_dealer/workflow/: service_job_card_workflow.json
auto_dealer/doctype/: emi_schedule  service_job_card_labour
auto_dealer/doctype/auto_dealer_settings/: __init__.py  auto_dealer_settings.json
auto_dealer/doctype/insurance_policy/: __init__.py  insurance_policy.py
auto_dealer/doctype/oem_target/: __init__.py  oem_target.py
auto_dealer/doctype/service_job_card/: __init__.py  service_job_card.py
auto_dealer/doctype/test_drive/: __init__.py  test_drive.py  (+1 more)
auto_dealer/events/: payment_entry.py  sales_invoice.py  service_job_card.py
auto_dealer/overrides/: __init__.py
auto_dealer/print_format/: README.md
auto_dealer/tasks/: daily.py  monthly.py  periodic.py  weekly.py
auto_dealer/workflow/: vehicle_sale_workflow.json
overrides/: customer.py  payment_entry.py  sales_order.py
public/js/: auto_dealer.js
(+38 files in other folders)
